@@ -62,7 +62,7 @@ public class DatasetReadRepositoryImpl implements DatasetReadRepository {
   private static final String CONTAINS_STUDY_WITH_SHORTNAME = loadResource("askContainsStudyWithLabel.sparql");
 
   private static final Node CLASS_VOID_DATASET = NodeFactory.createURI("http://rdfs.org/ns/void#Dataset");
-  public static final String HTTP_DRUGIS_ORG_EVENT_SOURCING_ES = "http://drugis.org/eventSourcing/es#";
+  private static final String HTTP_DRUGIS_ORG_EVENT_SOURCING_ES = "http://drugis.org/eventSourcing/es#";
 
 
   @Inject
@@ -117,7 +117,7 @@ public class DatasetReadRepositoryImpl implements DatasetReadRepository {
     VersionMapping versionMapping = versionMappingRepository.getVersionMappingByDatasetUrl(trialverseDatasetUri);
     ResponseEntity<JsonObject> responseEntity = doRequest(versionMapping, query, RDFLanguages.JSONLD.getContentType().getContentType(), JsonObject.class);
     JsonObject jsonObject = responseEntity.getBody();
-    return Boolean.TRUE.equals(new Boolean(jsonObject.get("boolean").toString()));
+    return Boolean.TRUE.equals(Boolean.valueOf(jsonObject.get("boolean").toString()));
   }
 
   private <T> ResponseEntity<T> doRequest(VersionMapping versionMapping, String query, String acceptType, Class responseType) {
@@ -131,8 +131,7 @@ public class DatasetReadRepositoryImpl implements DatasetReadRepository {
             .queryParam(WebConstants.QUERY_PARAM_QUERY, query)
             .build();
 
-    ResponseEntity<T> result  = restTemplate.exchange(uriComponents.toUri(), HttpMethod.GET, requestEntity, responseType);
-    return result;
+    return restTemplate.exchange(uriComponents.toUri(), HttpMethod.GET, requestEntity, responseType);
   }
 
   @Override
@@ -224,7 +223,7 @@ public class DatasetReadRepositoryImpl implements DatasetReadRepository {
 
   @Override
   @Cacheable(cacheNames="datasetHistory", key="#datasetUri.toString()")
-  public Model getHistory(URI datasetUri) throws IOException {
+  public Model getHistory(URI datasetUri) {
     URI uri = UriComponentsBuilder.fromHttpUrl(datasetUri.toString())
             .path(WebConstants.HISTORY_ENDPOINT)
             .build()
@@ -238,7 +237,7 @@ public class DatasetReadRepositoryImpl implements DatasetReadRepository {
   }
 
   @Override
-  public JSONObject executeHeadQuery(String sparqlQuery, VersionMapping versionMapping) throws URISyntaxException {
+  public JSONObject executeHeadQuery(String sparqlQuery, VersionMapping versionMapping) {
     ResponseEntity<JSONObject> responseEntity = doRequest(versionMapping, sparqlQuery, WebConstants.APPLICATION_SPARQL_RESULTS_JSON, JSONObject.class);
     JSONObject jsonObject = responseEntity.getBody();
     String versionUri = responseEntity.getHeaders().get(WebConstants.X_EVENT_SOURCE_VERSION).get(0);
